[package]
name = "bevy-spacetime-test"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
hex = "0.4"
crossbeam = "0.8.4"
bevy_hookup_core = "2.0.0"
bevy_hookup_messenger_websocket = "2.0.0"
bevy_hookup_messenger_self = "2.0.0"
serde = "1.0.219"
tokio = "1.47.1"
rand = "0.9.2"
